正则表达式修改